--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -33,14 +33,6 @@
   \KOMAoptions{parskip=half}}
 \makeatother
 \usepackage{xcolor}
-\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
-\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
-\hypersetup{
-  pdftitle={Procedures and Guidelines},
-  pdfauthor={Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar},
-  hidelinks,
-  pdfcreator={LaTeX via pandoc}}
-\urlstyle{same} % disable monospaced font for URLs
 \usepackage{longtable,booktabs,array}
 \usepackage{calc} % for calculating minipage widths
 % Correct order of tables after \paragraph or \subparagraph
@@ -65,8 +57,6 @@
 \def\fps@figure{htbp}
 \makeatother
 \usepackage[normalem]{ulem}
-% Avoid problems with \sout in headers with hyperref
-\pdfstringdefDisableCommands{\renewcommand{\sout}{}}
 \setlength{\emergencystretch}{3em} % prevent overfull lines
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
@@ -76,10 +66,18 @@
 \fi
 \usepackage[]{natbib}
 \bibliographystyle{plainnat}
+\IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
+\IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
+\urlstyle{same} % disable monospaced font for URLs
+\hypersetup{
+  pdftitle={Procedures and Guidelines},
+  pdfauthor={Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar},
+  hidelinks,
+  pdfcreator={LaTeX via pandoc}}
 
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2022-07-15}
+\date{2022-08-15}
 
 \begin{document}
 \maketitle
@@ -165,7 +163,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -188,7 +186,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -315,7 +313,7 @@ Convention has file naming proceed in the following order, with each element sep
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.2222}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1528}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 10\tabcolsep) * \real{0.1528}}@{}}
-\toprule
+\toprule()
 \begin{minipage}[b]{\linewidth}\raggedright
 Element-1
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
@@ -329,10 +327,10 @@ Element-1
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 .Element-5
 \end{minipage} \\
-\midrule
+\midrule()
 \endhead
 Last-Name & \_Date & \_Project & \_File-Contents & \_Version & .File-type \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \hypertarget{dates}{%
@@ -482,7 +480,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directories}{%
 \chapter{Directories}\label{directories}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 Directories are just folders; we'll use the terms interchangeably. All of the files on your computer are organized around folders. In some respects, this means that your computer is synonymous with a filing cabinet; you open it up and there are a bunch of folders holding files and sub-folders. Following this analogy, if you were to open your computer--and you were on a Mac--you'd see 16 folders, including the following:
 
@@ -656,7 +654,7 @@ You may have heard of other methods that can be used to set a working directory 
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 Now that we've covered naming conventions and have a sense of how our systems are organized around folder structures, let's pretend that you store everything on your computer in a single folder--some of us are probably known to use our desktops for this. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory or folder structures. This helps us save precious time and improve our productivity.
 
@@ -1056,7 +1054,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1082,36 +1080,36 @@ Non-tidy data - sometimes called "wide" data as it tends to use more columns, bu
 So, say we collected data about the number of trout caught at local lakes across several days. We might end up with the following data tables if we used a separate table, sheet of paper etc. to record our findings.
 
 \begin{longtable}[]{@{}ll@{}}
-\toprule
+\toprule()
 Site & Trout\_Caught\_Day\_1 \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 1 \\
 Postill-lake & 3 \\
 Ellison-lake & 0 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \begin{longtable}[]{@{}ll@{}}
-\toprule
+\toprule()
 Site & Trout\_Caught\_Day\_2 \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 3 \\
 Postill-lake & 4 \\
 Ellison-lake & 5 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \begin{longtable}[]{@{}ll@{}}
-\toprule
+\toprule()
 Site & Trout\_Caught\_Day\_3 \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 3 \\
 Postill-lake & 5 \\
 Ellison-lake & 1 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 It is also very likely that we set up an Excel sheet where we recorded the site as the first column and our days and fish caught combined in subsequent columns, one column for each day. Even if we hadn't collected our data this way, we might be tempted to group our above data together for analysis or assignment submission in this way.
@@ -1123,7 +1121,7 @@ Doing this, we'd end up with a table something like the following:
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2667}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2800}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2800}}@{}}
-\toprule
+\toprule()
 \begin{minipage}[b]{\linewidth}\raggedright
 Site
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
@@ -1133,12 +1131,12 @@ Trout\_Caught\_Day\_2
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 Trout\_Caught\_Day\_3
 \end{minipage} \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 1 & 3 & 3 \\
 Postill-lake & 3 & 4 & 5 \\
 Ellison-Lake & 0 & 5 & 1 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 But for analysis - for "tidy" data - we want one column per variable. In this case, we have three variables:
@@ -1165,44 +1163,44 @@ Tidy data breaks this down and reserves one column per variable and one row per 
 First, working with a collection tool where we have one table per day:
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 Site & Day & Trout\_Caught \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 1 & 1 \\
 Postill-lake & 1 & 3 \\
 Ellison-lake & 1 & 0 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 Site & Day & Trout\_Caught \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 2 & 3 \\
 Postill-lake & 2 & 4 \\
 Ellison-lake & 2 & 5 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 Site & Day & Trout\_Caught \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 3 & 3 \\
 Postill-lake & 3 & 5 \\
 Ellison-lake & 3 & 1 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 And second, gathering this data into a single dataset, sorted by site:
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 Site & Day & Trout\_Caught \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 1 & 1 \\
 Mabel-lake & 2 & 3 \\
@@ -1213,7 +1211,7 @@ Postill-lake & 3 & 5 \\
 Ellison-lake & 1 & 0 \\
 Ellison-lake & 2 & 5 \\
 Ellison-lake & 3 & 1 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 Now that's tidy data!
@@ -1230,7 +1228,7 @@ Now that's tidy data!
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2714}}@{}}
-\toprule
+\toprule()
 \begin{minipage}[b]{\linewidth}\raggedright
 Site
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
@@ -1240,12 +1238,12 @@ Trout\_Caught\_Day\_2
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 Trout\_Caught\_Day\_3
 \end{minipage} \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 1 & 3 & 3 \\
 Postill-lake & 3 & 4 & 5 \\
 Ellison-Lake & 0 & 5 & 1 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \hypertarget{tidy-data-2}{%
@@ -1253,9 +1251,9 @@ Ellison-Lake & 0 & 5 & 1 \\
 \addcontentsline{toc}{subsection}{Tidy Data}
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 Site & Day & Trout\_Caught \\
-\midrule
+\midrule()
 \endhead
 Mabel-lake & 1 & 1 \\
 Mabel-lake & 2 & 3 \\
@@ -1266,7 +1264,7 @@ Postill-lake & 3 & 5 \\
 Ellison-lake & 1 & 0 \\
 Ellison-lake & 2 & 5 \\
 Ellison-lake & 3 & 1 \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \hypertarget{part-data-presentation}{%
@@ -1276,7 +1274,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1407,13 +1405,13 @@ Here are some guidelines for reporting the results of statistical tests:
 \item
   Your \emph{Methods} section should clearly state the significance level (\(\alpha\)), and this should be decided prior to the study
 \item
-  Test statistics (e.g.~Student's \texttt{t} or an \texttt{F} from ANOVA) should be rounded to 2 decimal places, and associated \texttt{P-values} should report 3 decimal places, or if smaller than 0.001, then \textless0.001. \texttt{P-values} do not indicate `effect size, so reporting \(P = 10^{-6}\) is not more impressive than \emph{P} \textless0.001
+  Test statistics (e.g.~Student's \texttt{t} or an \texttt{F} from ANOVA) should be rounded to 2 decimal places, and associated \texttt{P-values} should report 3 decimal places, or if smaller than 0.001, then \textless0.001. \texttt{P-values} do not indicate \texttt{effect\ size}, so reporting \(P = 10^{-6}\) is not more impressive than \emph{P} \textless0.001
 \item
-  Concluding statements should, in the absence of a table, include the test, test statistic value, degrees of freedom \texttt{df} or sample sizes, \texttt{P-value}, and `confidence interval (if appropriate) in parentheses.
+  Concluding statements should, in the absence of a table, include the test, test statistic value, degrees of freedom \texttt{df} or sample sizes, \texttt{P-value}, and \texttt{confidence\ interval} (if appropriate) in parentheses.
 \item
   For example: "On average, hair loss was significantly greater among fathers compared to childless men (Welch's 2-sample \emph{t}-test; \emph{t} = 4.23; \emph{n} F = 18, \emph{n} C = 20; \emph{P} = 0.018; 95\% CI for difference: 9.34 -- 18.22\%)."\\
 \item
-  \texttt{Regression\ and\ \textless{}a\ href="https://ubco-biology.github.io/Procedures-and-Guidelines/glossary\#Analysis-of-variance"\textgreater{}}ANOVA results should be shown in a standard ANOVA table format.
+  Regression and ANOVA results should be shown in a standard ANOVA table format.
 \end{itemize}
 
 \textbf{Example of ANOVA table format}
@@ -1421,14 +1419,14 @@ Here are some guidelines for reporting the results of statistical tests:
 \textbf{Table 3.}
 
 \begin{longtable}[]{@{}llllll@{}}
-\toprule
+\toprule()
 & SS & df & MS & F & P \\
-\midrule
+\midrule()
 \endhead
 Treatment & 7.224 & 2 & 3.6122 & 7.29 & 0.004 \\
 Error & 9.415 & 19 & 0.4955 & & \\
 Total & 16.640 & 21 & 4.1078 & & \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \hypertarget{figures}{%
@@ -1491,7 +1489,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{sketches-drawings}{%
 \chapter{Sketches \& Drawings}\label{sketches-drawings}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
 
@@ -1637,7 +1635,7 @@ This figure is not directed to have the anterior region at the top, the labellin
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -1677,7 +1675,7 @@ You'll need a text editor or a dedicated Markdown editor! What's the difference?
 
 A text editor will not format your markdown, it'll just display the plain text. When you open the \_README.md files noted throughout this book (either in \textbf{TextEdit} on a Mac or \textbf{Notepad} on Windows), you see the raw, plain text output.
 
-TextEdit on your mac is not actually a plain text editor; while TextEdit can read and open a Markdown file, it cannot create a Markdown file. MacOS does not ship with a plain text editor like Notepad on Windows. So if you're on a Mac, you'll need to download a text editor.
+TextEdit on your mac is not actually a plain text editor; while TextEdit can read and open a Markdown file, it cannot create a Markdown file. MacOS does not come with a plain text editor like Notepad on Windows. So if you're on a Mac, you'll need to download a text editor.
 
 A dedicated Markdown editor will format your Markdown as you type, so you get an idea as to how it will render if you were to save it as a pdf, html etc. There are a lot of Markdown editors available, many of them free and open source, and many for very specific use cases. When you have some free time, you may choose to check out the following comprehensive list \url{https://www.markdownguide.org/tools/}.
 
@@ -1863,15 +1861,15 @@ Output
 \hypertarget{code}{%
 \section{Code}\label{code}}
 
-You can show text as code by encasing it with three backticks, ```.
+You can show text as code by encasing it with three backticks, \texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}}.
 
 Input
 
-```
+\texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}}
 
 This text looks like code
 
-```
+\texttt{\textasciigrave{}\textasciigrave{}\textasciigrave{}}
 
 Output
 
@@ -1983,13 +1981,13 @@ Input
 Output
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 Column 1 Header & Column 2 Header & Column 3 Header \\
-\midrule
+\midrule()
 \endhead
 Column 1 item & Column 2 item & Column 3 item \\
 Column 1 item & Column 2 item & Column 3 item \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \textbf{NOTE}
@@ -2047,7 +2045,7 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -2101,14 +2099,14 @@ The alternative is called a parenthetical citation.
 \addcontentsline{toc}{subsection}{Quick Format Guide}
 
 \begin{longtable}[]{@{}lll@{}}
-\toprule
+\toprule()
 \# of Authors & Narrative Example & Parenthetical Example \\
-\midrule
+\midrule()
 \endhead
 1 & Bradley (2017) & (Bradley, 2017) \\
 2 & Janmaat and Rahimova (2018) & (Janmaat \& Rahimova, 2018) \\
 3 or more & Mei et al.~(2018) & (Mei et al., 2018) \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \hypertarget{reference-list}{%
@@ -2147,13 +2145,13 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{reference-management-zotero}{%
 \chapter{Reference Management: Zotero}\label{reference-management-zotero}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 Imperative to managing our education and research is managing our readings and references. We can do this manually or we can take advantage of a tool - citation management software - specifically designed to keep your references organized, shareable, and easily citable.
 
 There are several options out there. Some are great for inter-institutional collaborations, some for review projects that have you processing 10s of thousands of citations, and others are great for managing your day to day needs.
 
-Here we're going to get you set up with a tool wello suited for the latter - Zotero.
+Here we're going to get you set up with a tool well suited for the latter - Zotero.
 
 This overview will get you set up with an account, and importing your first reference.
 
@@ -2234,11 +2232,11 @@ First things first - because we want to be organized - in Zotero, create a folde
 
 \includegraphics{images/Z_BIOLResearch.png}
 
-Say we're searching Web of Science Core Collection, we find an article we're interested in and we follow the link to read the article. And let's say that takes us here (que to follow the link): {[}\url{https://www.sciencedirect.com/science/article/pii/S0929139312000224}{]}\url{https://www.sciencedirect.com/science/article/pii/S0929139312000224})\{target=``\_blank''\}
+Say we're searching Web of Science Core Collection, we find an article we're interested in and we follow the link to read the article. And let's say that takes us here (que to follow the link): \url{https://www.sciencedirect.com/science/article/pii/S0929139312000224}
 
 We'll see that when we're looking at an article, our web browser plugin changes to reflect this by now looking like a document.
 
-Click on it, and Zotero will harvest both the requisite meta data and the pdf for you.
+Click on it, and Zotero will harvest both the requisite metadata and the pdf for you.
 
 \includegraphics{images/Z_FirstImport.png}
 
@@ -2249,7 +2247,7 @@ Head back into Zotero and you'll see your reference.
 
 Select the arrow adjacent to the title and you'll see your PDF.
 
-Right click the PDF and select \texttt{Rename\ File\ from\ Parent\ Metadata} and you've got a nicely titled article. Double click the PDF and it opens in your default PDF reader.
+Right click the PDF and select \texttt{Rename\ File\ from\ Parent\ Metadata}. There! You've got a nicely titled article. Double click the PDF and it opens in your default PDF reader.
 
 \includegraphics{images/Z_PDFRename.png}
 
@@ -2273,7 +2271,7 @@ You'll see your recently synced citation and associated attachments.
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -2282,7 +2280,7 @@ Learn more about academic integrity from the \href{https://students.ok.ubc.ca/ac
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -2291,7 +2289,7 @@ Learn more about copyright at UBC from the \href{https://copyright.ubc.ca/}{UBC 
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2022-07-15}
+\emph{Last updated 2022-08-15}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
@@ -2536,7 +2534,7 @@ Repeat this process for the remainder of the objectives on your microscope. Your
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2738}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2262}}
   >{\raggedright\arraybackslash}p{(\columnwidth - 6\tabcolsep) * \real{0.2619}}@{}}
-\toprule
+\toprule()
 \begin{minipage}[b]{\linewidth}\raggedright
 Ocular-magnification
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
@@ -2546,13 +2544,13 @@ Total-magnification
 \end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
 Field-of-view-diameter
 \end{minipage} \\
-\midrule
+\midrule()
 \endhead
 10x & 4x & 40x & 4 mm \\
 10x & 10x & 100x & 1.6 mm \\
 10x & 40x & 400x & 0.4 mm \\
 10x & 100x & 1000x & 0.16 mm \\
-\bottomrule
+\bottomrule()
 \end{longtable}
 
 \hypertarget{estimating-object-size}{%
