--- a/10-ReferenceManagement.Rmd
+++ b/10-ReferenceManagement.Rmd
@@ -6,7 +6,7 @@ Imperative to managing our education and research is managing our readings and r
 
 There are several options out there. Some are great for inter-institutional collaborations, some for review projects that have you processing 10s of thousands of citations, and others are great for managing your day to day needs.
 
-Here we\'re going to get you set up with a tool wello suited for the latter - Zotero.
+Here we\'re going to get you set up with a tool well suited for the latter - Zotero.
 
 This overview will get you set up with an account, and importing your first reference.
 
@@ -75,11 +75,11 @@ First things first - because we want to be organized - in Zotero, create a folde
 
 ![](images/Z_BIOLResearch.png)
 
-Say we\'re searching Web of Science Core Collection, we find an article we\'re interested in and we follow the link to read the article. And let\'s say that takes us here (que to follow the link): [https://www.sciencedirect.com/science/article/pii/S0929139312000224]https://www.sciencedirect.com/science/article/pii/S0929139312000224){target="_blank"}
+Say we\'re searching Web of Science Core Collection, we find an article we\'re interested in and we follow the link to read the article. And let\'s say that takes us here (que to follow the link): [https://www.sciencedirect.com/science/article/pii/S0929139312000224](https://www.sciencedirect.com/science/article/pii/S0929139312000224){target="_blank"}
 
 We\'ll see that when we\'re looking at an article, our web browser plugin changes to reflect this by now looking like a document.
 
-Click on it, and Zotero will harvest both the requisite meta data and the pdf for you.
+Click on it, and Zotero will harvest both the requisite metadata and the pdf for you.
 
 ![](images/Z_FirstImport.png)
 
@@ -89,7 +89,7 @@ Head back into Zotero and you\'ll see your reference.
 
 Select the arrow adjacent to the title and you\'ll see your PDF.
 
-Right click the PDF and select `Rename File from Parent Metadata` and you\'ve got a nicely titled article. Double click the PDF and it opens in your default PDF reader.
+Right click the PDF and select `Rename File from Parent Metadata`. There! You\'ve got a nicely titled article. Double click the PDF and it opens in your default PDF reader.
 
 ![](images/Z_PDFRename.png)
 
