--- a/docs/Procedures-and-Guidelines.tex
+++ b/docs/Procedures-and-Guidelines.tex
@@ -77,7 +77,7 @@
 
 \title{Procedures and Guidelines}
 \author{Clerissa Copeland, Jason Pither, and Mathew Vis-Dunbar}
-\date{2022-08-16}
+\date{2022-08-17}
 
 \begin{document}
 \maketitle
@@ -163,7 +163,7 @@ This book is divided into 4 sections.
 \hypertarget{file-and-data-management}{%
 \chapter{File and Data Management}\label{file-and-data-management}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 Well-organized data is critical to transparency, reproducibility, and generally maintaining one's sanity when conducting research. When we talk about file and data management, we may be referring to one of many aspects of making our data understandable to others, to a computer, or to our future selves that have succumb to memory lapses. Making data comprehensible is really about well-structured and communicated metadata that is, whenever possible, implemented according to conventions or standards.
 
@@ -186,7 +186,7 @@ Organizing and formatting data is a discussion about the best way to sort and pa
 \hypertarget{file-naming}{%
 \chapter{File Naming}\label{file-naming}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 File naming isn't exactly fun, but it is crucial for organizing, describing, and managing all kinds of work, especially research. So, let's talk about the file naming conventions that you will be expected to use while at UBCO.
 
@@ -480,7 +480,7 @@ Pither_BIOL116RProject_Lab-report_V3.docx
 \hypertarget{directories}{%
 \chapter{Directories}\label{directories}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 Directories are just folders; we'll use the terms interchangeably. All of the files on your computer are organized around folders. In some respects, this means that your computer is synonymous with a filing cabinet; you open it up and there are a bunch of folders holding files and sub-folders. Following this analogy, if you were to open your computer--and you were on a Mac--you'd see 16 folders, including the following:
 
@@ -654,7 +654,7 @@ You may have heard of other methods that can be used to set a working directory 
 \hypertarget{directory-structures}{%
 \chapter{Directory Structures}\label{directory-structures}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 Now that we've covered naming conventions and have a sense of how our systems are organized around folder structures, let's pretend that you store everything on your computer in a single folder--some of us are probably known to use our desktops for this. Imagine how long it would take you to find data you collected on a specific day a few years ago. Instead of keeping every document in a single place, we often organize our files using directory or folder structures. This helps us save precious time and improve our productivity.
 
@@ -1054,7 +1054,7 @@ We can start to see that if you were to share your entire project directory with
 \hypertarget{tidy-data}{%
 \chapter{Tidy data}\label{tidy-data}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 We've talked about file naming, directory structures, and documentation to ensure accessible, interpretable, and transparent data. Now it's time to talk about organizing individual variables within a given file. When properly organized, data values can be effectively analyzed, summarized, and visualized. When not, they can be onerous to work with and risk misinterpretation.
 
@@ -1274,7 +1274,7 @@ Ellison-lake & 3 & 1 \\
 \hypertarget{figures-tables}{%
 \chapter{Figures \& Tables}\label{figures-tables}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 These guidelines are based on current "best practices" in Biology. You may encounter small differences when working with data or reading the results of research from other disciplines. Our aim is to achieve consistency among faculty, instructors, and students in how data are summarized and presented within lab reports and research papers.
 
@@ -1489,7 +1489,7 @@ When displaying data using a figure, follow these guidelines:
 \hypertarget{sketches-drawings}{%
 \chapter{Sketches \& Drawings}\label{sketches-drawings}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 We've heard it before, a picture is worth a thousand words. While a common place phrase, it echoes very true in biological research. Describing in text the morphological features of an organism is no easy task. Trying to form a mental image of an organism described in text still more difficult! As a simple example, imagine trying to draw a representation of \emph{Fritillaria pudica} from the botanical description in the \href{http://www.efloras.org/florataxon.aspx?flora_id=1\&taxon_id=242101628}{Flora of North America}. No easy task. So let's talk about sketches\ldots{}
 
@@ -1635,7 +1635,7 @@ This figure is not directed to have the anterior region at the top, the labellin
 \hypertarget{markdown-1}{%
 \chapter{Markdown}\label{markdown-1}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 Markdown is a markup language used to format plain text files to help us provide additional meaning to our content. Markup languages are ideal authoring tools because they work on the principle of separating content from formatting. Markup languages are ideal authoring tools for the sciences because they rely on plain text, so any computer anywhere at any time will be able to open them and consequently, we will be able to read them.
 
@@ -2045,15 +2045,17 @@ We'll keep it simple for the moment; this is all you really need for your \_READ
 \hypertarget{types-of-sources}{%
 \chapter{Types of Sources}\label{types-of-sources}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
-As you conduct research and throughout your studies you will encounter many different types of sources. This chapter will briefly introduce and provide examples of three commonly utilized sources: primary, secondary, and review sources. For more in-depth information about types of sources visit the \href{https://guides.library.ubc.ca/c.php?g=704417\&p=5011059}{UBC Library Research Skills for Biologists Guide} and the \href{https://guides.library.ubc.ca/litreviews}{UBC Literature Review Guide}.
+As you conduct research and throughout your studies you will encounter many different types of sources. This chapter will briefly introduce and provide examples of three commonly utilized sources: primary, secondary, and review sources.
+
+For more in-depth information about types of sources visit the \href{https://guides.library.ubc.ca/c.php?g=704417\&p=5011059}{UBC Library Research Skills for Biologists Guide} and the \href{https://guides.library.ubc.ca/litreviews}{UBC Literature Review Guide}.
 
 \hypertarget{primary-sources}{%
 \subsection*{Primary Sources}\label{primary-sources}}
 \addcontentsline{toc}{subsection}{Primary Sources}
 
-Primary sources are scientific papers describing the first hand accounts of events or theories. In other words, an original publication where the author(s) discuss work performed by them. Examples of primary sources include:
+Primary sources are scientific papers describing the first hand accounts of events or theories. In other words, an original publication where the author(s) discuss work performed by them. Primary sources can describe either exploratory or confirmatory research. For a refresher on these types of research see \href{https://ubco-biology.github.io/OS-Introduction/the-burden-of-proof.html}{The Burden of Proof} section of the Open Science Primer. Examples of primary sources include:
 
 \begin{itemize}
 \tightlist
@@ -2086,6 +2088,8 @@ Secondary sources are scientific papers written by a person who did not particip
 \item
   abstracts and indexes
 \end{itemize}
+
+To help you distinguish between a primary and secondary source, ask yourself ``Did the researchers collect data to answer a question or are they reporting on someone else's data?'' If the answer is the former, the source is primary. However, if the answer is reporting on someone else's data the source is secondary.
 
 \hypertarget{review-sources}{%
 \subsection*{Review Sources}\label{review-sources}}
@@ -2125,12 +2129,24 @@ Systematic reviews are similar to scoping reviews in that they follow a specific
 
 Meta-analyses further expand on systematic reviews by including a quantitative statistical analysis of the results. Typically this involves combining the effect sizes of similar studies to determine an overall effect size related to the research question.
 
-For more information on systematic reviews and meta-analyses see the \href{https://jbi-global-wiki.refined.site/space/MANUAL/4688650/Chapter+1\%3A+JBI+Systematic+Reviews}{Joanna Briggs Institute Guidelines} or \href{https://prisma-statement.org/PRISMAStatement/Checklist.aspx}{PRISMA checklist} for conducting a systematic review.
+For more information on evidence synthesis, systematic reviews, and meta-analyses see the following links:
+
+\begin{itemize}
+\tightlist
+\item
+  \href{https://jbi-global-wiki.refined.site/space/MANUAL/4688650/Chapter+1\%3A+JBI+Systematic+Reviews}{Joanna Briggs Institute Guidelines}
+\item
+  \href{https://prisma-statement.org/PRISMAStatement/Checklist.aspx}{PRISMA checklist}
+\item
+  \href{https://environmentalevidence.org/information-for-authors/}{Collaboration for Environmental Evidence}
+\item
+  O'Dea et al.~(2021). \emph{Preferred reporting items for systematic reviews and meta‐analyses in ecology and evolutionary biology: A PRISMA extension}. \emph{Biological Reviews of the Cambridge Philosophical Society}, \emph{96}(5), 1695-1722. \url{https://doi.org/10.1111/brv.12721}
+\end{itemize}
 
 \hypertarget{apa-citations}{%
 \chapter{APA Citations}\label{apa-citations}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 This chapter is a brief overview of the 7th edition of APA. For a more in depth review, please consult \href{https://guides.library.ubc.ca/apacitationstyle}{the library's APA Citation Guide}. For the full APA manual, please consult the \href{http://resolve.library.ubc.ca/cgi-bin/catsearch?bid=10057275}{Publication Manual of the American Psychological Association}, available through the library.
 
@@ -2230,7 +2246,7 @@ Mei, Y., Yu, K., Lo, J. C. Y., Takeuchi, L. E., Hadjesfandiari, N., Yazdani-Ahma
 \hypertarget{reference-management-zotero}{%
 \chapter{Reference Management: Zotero}\label{reference-management-zotero}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 Imperative to managing our education and research is managing our readings and references. We can do this manually or we can take advantage of a tool - citation management software - specifically designed to keep your references organized, shareable, and easily citable.
 
@@ -2356,7 +2372,7 @@ You'll see your recently synced citation and associated attachments.
 \hypertarget{academic-integrity}{%
 \chapter{Academic Integrity}\label{academic-integrity}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 Academic integrity is the act of performing honest, responsible scholarship, much like scientific integrity is honest, responsible science. Academic integrity is very much about how we conduct ourselves in the pursuit of our studies, respecting those we learn from and work with and the contributions they make to our scholarly and scientific endeavours.
 
@@ -2365,7 +2381,7 @@ Learn more about academic integrity from the \href{https://students.ok.ubc.ca/ac
 \hypertarget{copyright-1}{%
 \chapter{Copyright}\label{copyright-1}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 Copyright is the legal ownership of a work, like a book, image, graph, journal article. Copyright law governs how and when we are allowed to redistribute what someone else has produced and how others can redistribute what we've produced.
 
@@ -2374,7 +2390,7 @@ Learn more about copyright at UBC from the \href{https://copyright.ubc.ca/}{UBC 
 \hypertarget{glossary}{%
 \chapter{Glossary}\label{glossary}}
 
-\emph{Last updated 2022-08-16}
+\emph{Last updated 2022-08-17}
 
 \textbf{A priori hypothesis:} Hypothesis that is generated before the research study takes place. Presenting the hypothesis before the study takes place helps in avoiding replacing the hypothesis later with one that fits the data better aka hypothesizing after the fact (HARKing).
 
